--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
     --oscuro:#212121;
     --primario:#ff5722; 
     --secundario:#FC9905;
+    --gridClaro: #DFE9F3;
 }
 /* Globales */
 html{
@@ -18,11 +19,13 @@ html{
 body{
     font-size: 16px;/* 1rem = 10px*/
     font-family: 'Ubuntu', sans-serif;
+    background-image: linear-gradient(to top, var(--gridClaro) 0%, var(--blanco) 100%);
 }
 
 .contenedor{
     max-width: 120rem;
     margin: 0 auto;
+    text-align: center;
 }
 .boton{
     background-color: var(--secundario);
@@ -43,6 +46,13 @@ body{
         width: auto;
     }
 }
+.sombra {
+    -webkit-box-shadow: 0px 5px 15px 0px rgba(0,0,0,0.45);
+    -moz-box-shadow: 0px 5px 15px 0px rgba(0,0,0,0.45);
+    box-shadow: 0px 5px 15px 0px rgba(0,0,0,0.45);
+    padding: 2rem;
+    border-radius: 2rem;
+ }
 /* Tipografia */
 h1{
     font-size: 3.8rem;
@@ -94,6 +104,7 @@ h3{
     background-size: cover;
     height: 45rem;
     position: relative;
+    margin-bottom: 2rem;
 }
 .contenido-hero{
     position: absolute;
