--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,6 @@ body{
 .contenedor{
     max-width: 120rem;
     margin: 0 auto;
-    text-align: center;
 }
 .boton{
     background-color: var(--secundario);
@@ -126,3 +125,13 @@ h3{
     display: flex;
     align-items: flex-end;
 }
+/** Servicios **/
+@media (min-width: 768px) {
+    .servicios{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        column-gap: 1rem;
+    }
+}
+
+.servicio{}
