--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,8 @@
     --primario:#ff5722; 
     --secundario:#FC9905;
     --gridClaro: #DFE9F3;
+    --azulClaro:rgb(0, 171, 251);
+    --girs: #626567;
 }
 /* Globales */
 html{
@@ -25,6 +27,7 @@ body{
 .contenedor{
     max-width: 120rem;
     margin: 0 auto;
+    background-color: var(--blanco);
 }
 .boton{
     background-color: var(--secundario);
@@ -58,6 +61,7 @@ h1{
 }
 h2{
     font-size: 2.8rem;
+    text-align: center;
 }
 h3{
     font-size: 1.8rem;
@@ -126,6 +130,7 @@ h3{
     align-items: flex-end;
 }
 /** Servicios **/
+
 @media (min-width: 768px) {
     .servicios{
         display: grid;
@@ -134,4 +139,49 @@ h3{
     }
 }
 
-.servicio{}
+.servicio {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.servicio h3 {
+    color: var(--secundario);
+    font-weight: normal;
+}
+.servicio p {
+    line-height: 2;
+}
+.servicio .iconos {
+    height: 15rem;
+    width: 15rem;
+    background-color: var(--azulClaro);
+    border-radius: 50%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+/** Contacto **/
+.formulario{
+    background-color: var(--girs);
+    width: min( 60rem, 100%); /* min utiliza el valor mas pequeño */
+    margin: 0 auto;
+    padding: 2rem;
+    border-radius: 2rem;
+}
+
+.formulario fieldset {
+    border: none;
+}
+
+.formulario legend{
+    text-align: center;
+    font-size: 1.8rem;
+    text-transform: uppercase;
+    font-weight: bold;
+    margin-bottom: 2rem;
+    color: var(--azulClaro);
+}
+
+.contenedor-campos {
+}
