--- a/css/styles.css
+++ b/css/styles.css
@@ -184,4 +184,15 @@ h3{
 }
 
 .contenedor-campos {
+
+}
+
+.campo{
+    margin-bottom: 1rem;
+}
+.campo label{
+    color: var(--blanco);
+    font-weight: bold;
+    margin-bottom: .5rem;
+    display: block;
 }
