--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,6 @@ body{
 .contenedor{
     max-width: 120rem;
     margin: 0 auto;
-    background-color: var(--blanco);
 }
 .boton{
     background-color: var(--secundario);
@@ -41,6 +40,10 @@ body{
     border-radius: .5rem;
     width: 90%;
     text-align: center;
+    border: none;
+}
+.boton:hover{
+    cursor: pointer;
 }
 
 @media (min-width: 480px) {
@@ -72,6 +75,21 @@ h3{
 }
 .titulo span{
     font-size: 2rem;
+}
+/* Utilidades */
+.w-100{
+    width: 100%;
+}
+@media (min-width: 768px) {
+   .w-100 {
+    width: auto;
+   }
+}
+.flex {
+    display: flex;
+}
+.alinear-derecha {
+    justify-content: flex-end;
 }
 /* Navegacion Principal */
 .nav-bg{
@@ -193,6 +211,17 @@ h3{
 .campo label{
     color: var(--blanco);
     font-weight: bold;
-    margin-bottom: .5rem;
+    margin-bottom: 1rem;
     display: block;
+}
+
+.input-text {
+    width: 100%;
+    border: none;
+    padding: 1.5rem;
+    border-radius: 0.5rem;
+}
+
+.enviar .boton{
+    width: 100%;
 }
