--- a/css/styles.css
+++ b/css/styles.css
@@ -12,10 +12,18 @@
 html{
     font-size: 62.5%;
     box-sizing: border-box; /* Define un esandar para cada caja*/
+    scroll-snap-type: y mandatory;
+}
+/* Scroll Snap */
+.servicios,
+.navegacion-principal,
+.formulario {
+    scroll-snap-align: center;
+    scroll-snap-stop: always;
 }
 
 *, *:before, *:after{
-    box-sizing: inherit;
+    box-sizing: inherit;   
 }
 
 body{
@@ -147,6 +155,7 @@ h3{
     display: flex;
     align-items: flex-end;
 }
+
 /** Servicios **/
 
 @media (min-width: 768px) {
@@ -201,8 +210,18 @@ h3{
     color: var(--azulClaro);
 }
 
-.contenedor-campos {
+@media (min-width: 768px) {
+    .contenedor-campos {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: auto auto auto;
+        column-gap: 1rem;
+    }
 
+    .campo:nth-child(3),
+    .campo:nth-child(4) {
+        grid-column: 1 / 3;
+    }
 }
 
 .campo{
@@ -215,6 +234,10 @@ h3{
     display: block;
 }
 
+.campo textarea {
+    height: 20rem;
+}
+
 .input-text {
     width: 100%;
     border: none;
@@ -222,6 +245,8 @@ h3{
     border-radius: 0.5rem;
 }
 
-.enviar .boton{
-    width: 100%;
+/* Footer */
+
+.footer {
+    text-align: center;
 }
